--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 </head>
 <body>
     <!--Layout-->
-    <h1>New year Count Down</h1>
+    <div class="heading"><h1>New Year Countdown</h1></div>
     <div class="year" id="year"></div>
     <div id="countdown" class="countdown">
         <div class="time">
           <h2 id="days">00</h2>
-          <small>days</small>
+          <h4>Days</h4>
         </div>
         <div class="time">
           <h2 id="hours">00</h2>
-          <small>hours</small>
+          <h4>Hours</h4>
         </div>
         <div class="time">
           <h2 id="minutes">00</h2>
-          <small>minutes</small>
+          <h4>Minutes</h4>
         </div>
         <div class="time">
           <h2 id="seconds">00</h2>
-          <small>seconds</small>
+          <h4>Seconds</h4>
         </div>
       </div>
   
