--- a/index.html
+++ b/index.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>New Year Count Down</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>New Year Count Down</title>
+  <!--used this inline method because css style won't display for some technical reasons-->
+  <style>
+    body {
+      background-image: url('assets/images/skyone.jpg');
+    }
+    </style>
 </head>
+
 <body>
-    <!--Layout-->
-    <div class="heading"><h1>New Year Countdown</h1></div>
-    <div class="year" id="year"></div>
-    <div id="countdown" class="countdown">
-        <div class="time">
-          <h2 id="days">00</h2>
-          <h4>Days</h4>
-        </div>
-        <div class="time">
-          <h2 id="hours">00</h2>
-          <h4>Hours</h4>
-        </div>
-        <div class="time">
-          <h2 id="minutes">00</h2>
-          <h4>Minutes</h4>
-        </div>
-        <div class="time">
-          <h2 id="seconds">00</h2>
-          <h4>Seconds</h4>
-        </div>
-      </div>
-  
-    
-    <script src="assets/js/script.js"></script>
+  <!--Layout-->
+  <div class="heading">
+    <h1>New Year Countdown</h1>
+  </div>
+
+  <div id="countdown" class="countdown">
+    <div class="counter">
+      <h2 id="days"></h2>
+      <h3>Days</h3>
+    </div>
+    <div class="counter">
+      <h2 id="hours"></h2>
+      <h3>Hours</h3>
+    </div>
+    <div class="counter">
+      <h2 id="minutes"></h2>
+      <h3>Minutes</h3>
+    </div>
+    <div class="counter">
+      <h2 id="seconds"></h2>
+      <h3>Seconds</h3>
+    </div>
+  </div>
+
+
+  <script src="assets/js/script.js"></script>
 </body>
+
 </html>
